// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressTable should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="flex items-center py-5 space-x-4"
    >
      <div
        aria-label="ARK Devnet"
        class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex"
      >
        <h2
          class="mb-0 text-2xl font-bold"
        >
          ARK Devnet
        </h2>
        <span
          class="ml-2 text-2xl font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          1
        </span>
      </div>
    </div>
    <div
      class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                    height="5"
                    role="img"
                    width="8"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Wallet Type
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                    height="5"
                    role="img"
                    width="8"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-15"
              >
                <div>
                  Delegate
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Rank
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center no-border"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="inline-flex items-center no-ligatures"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    <span
                      class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
              >
                <div
                  class="inline-flex items-center space-x-2"
                />
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
              >
                <span
                  data-testid="Amount"
                >
                  33.75089801 DARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                </div>
                <span>
                  arkx
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
              >
                <span>
                  #
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
              >
                <div
                  class="sc-bdfBwQ iSzUah text-theme-success-600"
                  data-testid="AddressRow__status"
                  height="22"
                  width="22"
                >
                  <svg>
                    status-ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 iUSBMV"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="flex items-center py-5 space-x-4"
    >
      <div
        aria-label="ARK Devnet"
        class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex"
      >
        <h2
          class="mb-0 text-2xl font-bold"
        >
          ARK Devnet
        </h2>
        <span
          class="ml-2 text-2xl font-bold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          1
        </span>
      </div>
    </div>
    <div
      class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                    height="5"
                    role="img"
                    width="8"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Wallet Type
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                    height="5"
                    role="img"
                    width="8"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  Delegates
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top no-border"
              >
                <div>
                  Votes
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="inline-flex items-center no-ligatures"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    <span
                      class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
              >
                <div
                  class="inline-flex items-center space-x-2"
                />
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
              >
                <span
                  data-testid="Amount"
                >
                  33.75089801 DARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
              >
                <div
                  class="flex items-center h-11"
                >
                  <div
                    class="flex -space-x-3"
                  >
                    <span
                      class="inline-block"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
              >
                <div
                  class="font-bold text-theme-secondary-400"
                >
                  <span
                    class="text-theme-secondary-text"
                  >
                    1
                  </span>
                  <span>
                    /10
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 iUSBMV"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
